# isstech-pro

./: .env.example  .gitignore  README.md  portal_login.html  pyproject.toml
captures/: Login_JS_Index  README.md  Scripts_jquery.form.min.js
docs/: architecture.md  endpoint-matrix.md  evidence-manifest.json  final-verification.md  login-capture-runbook.md  openapi.json  scope.md  unified-workflow-center-plan.md  vulnerability-report.md
ops/: com.isstech.workflow-center.sync.plist  com.isstech.workflow-center.web.plist
tests/: test_account_scope.py  test_api.py  test_assistant.py  test_attachments.py  test_auth.py  test_bizcase.py  test_daily_expense.py  test_extraction.py  test_fee_application.py  test_field_mapping.py  test_materials.py  test_payment.py  test_portal.py  test_procurement.py  test_purchase.py  test_readonly_sync.py  test_redact_login_cdp.py  test_redact_login_har.py  test_request_builders.py  test_runtime_deployment.py  test_safety.py  test_scheduled_sync.py  test_storage.py  test_sync.py  test_travel_application.py  test_ui.py  test_verify_no_secrets.py  test_web_launch_agent.py  test_work_items.py  test_workflow_state.py
tools/: __init__.py  configure_assistant_keychain.py  configure_sync_keychain.py  export_openapi.py  extract_material.py  first-commit.sh  generate_daily_brief.py  ingest_materials.py  install_launch_agent.py  install_web_launch_agent.py  live_smoke.py  redact_login_cdp.py  redact_login_har.py  scheduled_sync.py  sync_work_items.py  verify_evidence.py  verify_no_secrets.py
web/: index.html  package-lock.json  package.json  (+1 more)
(+162 files in other folders)
