[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "isstech-replay"
version = "0.1.0"
description = "Browser-independent protocol replay for the iPSA CTF target"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "pydantic>=2.10,<3",
  "python-multipart>=0.0.20,<1",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "httpx2>=2.5,<3",
  "pytest>=8.3,<9",
  "respx>=0.22,<1",
  "ruff>=0.9,<1",
]

[project.scripts]
isstech-api = "isstech_replay.api:run"

[tool.hatch.build.targets.wheel]
packages = ["src/isstech_replay"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]

[tool.ruff]
line-length = 100
target-version = "py311"
